RESOLVED FIXED276601
Regression(275398) "error: lambda without a parameter clause is a C++23 extension"
https://bugs.webkit.org/show_bug.cgi?id=276601
Summary Regression(275398) "error: lambda without a parameter clause is a C++23 exten...
Gerald Squelart
Reported 2024-07-14 23:19:38 PDT
Since bug 275398 I'm getting a few of these errors: ``` /Volumes/WebKit/OpenSource/WebKitBuild/Release/usr/local/include/wtf/HashTable.h:480:115: error: lambda without a parameter clause is a C++23 extension [-Werror,-Wc++23-extensions] 480 | AddResult add(const ValueType& value) { return add<IdentityTranslatorType>(Extractor::extract(value), [&] ALWAYS_INLINE_LAMBDA { return value; }); } ``` with `#define ALWAYS_INLINE_LAMBDA __attribute__((__always_inline__))`. It seems the C++20 compiler doesn't like `[...] ALWAYS_INLINE_LAMBDA {...}`, this can be fixed by adding an explicit empty parameter list before the macro: `[...]() ALWAYS_INLINE_LAMBDA {...}`.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-14 23:19:58 PDT
Gerald Squelart
Comment 2 2024-07-14 23:25:42 PDT
EWS
Comment 3 2024-07-15 00:11:08 PDT
Committed 280959@main (1609620e6541): <https://commits.webkit.org/280959@main> Reviewed commits have been landed. Closing PR #30809 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.