REGRESSION(280952@main) "error: lambda without a parameter clause is a C++23 extension" https://bugs.webkit.org/show_bug.cgi?id=276601 rdar://problem/131735283

Unreviewed build fix.

C++20 doesn't like `[] __attribute__(...) {}`, fixed by adding an empty
parameter list: `[]() __attribute__(...) {}`.

* Source/WTF/wtf/HashSet.h:
(WTF::TableTraits>::add):
* Source/WTF/wtf/HashTable.h:
(WTF::HashTable::add):
(WTF::KeyTraits>::HashTable):
* Source/WTF/wtf/RobinHoodHashTable.h:
(WTF::RobinHoodHashTable::add):

Canonical link: https://commits.webkit.org/280959@main